--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront (1).png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Injustices of Abortion</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Title of Our Project</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -152,18 +152,11 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Aaron Hegg for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Andrew Patrick for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Avri Marihugh for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Brandee Stenman-Milcher for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Sydney Mann for more infomation on x</p></div>
                 </div>
             </div>
         </section>
