--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
                     <div class="col-sm"><p>Contact Aaron Hegg for more infomation-heggaaro@msu.edu</p></div>
-                    <div class="col-sm"><p>Contact Andrew Patrick for more infomation patri201@msu.edu</p></div>
-                    <div class="col-sm"><p>Contact Avri Marihugh for more infomation-marihugh@msu.edu x</p></div>
+                    <div class="col-sm"><p>Contact Andrew Patrick for more infomation-patri201@msu.edu</p></div>
+                    <div class="col-sm"><p>Contact Avri Marihugh for more infomation-marihugh@msu.edu</p></div>
                     <div class="col-sm"><p>Contact Brandee Stenman-Milcher for more infomation-stenmanm@msu.edu</p></div>
                     <div class="col-sm"><p>Contact Sydney Mann for more infomation-mannsydn@msu.edu</p></div>
                 </div>
