--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/d-Q2X6FY0-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" alt="..." /> 
+                            <img class="img-fluid" src="<iframe width="560" height="315" src="assets/img/portfolio/SJImage4.png" alt="..." /> 
                         </div>
                     </div>
                     <!-- Involved Item 3-->
@@ -230,7 +230,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Q2X6FY0-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
