--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="<iframe width="560" height="315" src="assets/img/portfolio/SJImage4.png" alt="..." /> 
+                            <img class="img-fluid" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/d-Q2X6FY0-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" alt="..." /> 
                         </div>
                     </div>
                     <!-- Involved Item 3-->
@@ -230,7 +230,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Video-->
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Q2X6FY0-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
@@ -254,7 +254,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of PDF</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Implications of Unintended Pregnancies for Mental Health in Later Life</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -262,9 +262,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                        <a class="btn btn-primary btn-lg" href="assets/documents/AJPH.pdf" target="_blank" alt="...">The Implications of Unintended Pregnancies for Mental Health in Later Life</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
+                                        <a class="btn btn-primary btn-lg" href="assets/documents/AJPH.pdf" target="_blank" alt="...">Click Here to Open PDF</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><br>Unplanned pregnancies are common to women around the world, but the mental state of those women is not always talked about. Women who have unwanted pregnancies have a higher risk for anxiety and depression as well as illicit drug use and are more likely to smoke. In an article written by BMC it stated, "Unintended pregnancy contributed to increased risks of maternal depression and parenting stress." This affects the outcome of someone's life tremendously. It is important to have resources such as abortion available to everyone if need be. When taking a further look into unplanned/unwanted pregnancies, the children conceived are more prone to have behavioral and psychological issues in their future. The National Library of Medicine states "The large majority of the research focused on unintended pregnancies has attempted to document the effects of pregnancy intention on the health and development of infants and children — with poorer comparative outcomes found among children resulting from unintended pregnancies." Abortion should be something accessible to all people and the mental health of </p>
+                                    <p class="mb-4"><br>Unplanned pregnancies are common to women around the world, but the mental state of those women is not always talked about. Women who have unwanted pregnancies have a higher risk for anxiety and depression as well as illicit drug use and are more likely to smoke. It is important to have resources such as abortion available to everyone if need be. When taking a further look into unplanned/unwanted pregnancies, the children conceived are more prone to have behavioral and psychological issues in their future. The National Library of Medicine states "The large majority of the research focused on unintended pregnancies has attempted to document the effects of pregnancy intention on the health and development of infants and children — with poorer comparative outcomes found among children resulting from unintended pregnancies." Abortion should be something accessible to all people and the mental health of individuals being pressured to continue on with an unplanned pregnancy should be talked about more often./p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
