--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="<iframe width="560" height="315" src="assets/img/portfolio/E5A2E695-36C7-4373-B5D2-15B6806321FF.jpeg" alt="..." /> 
+                            <img class="img-fluid" src="assets/img/portfolio/E5A2E695-36C7-4373-B5D2-15B6806321FF.jpeg" alt="..." /> 
                         </div>
                     </div>
                     <!-- Involved Item 3-->
