--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                     <!-- Portfolio Modal - Video-->
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Q2X6FY0-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
+                                    <p class="mb-4">Women of color are disproportionately affected by the overturning of Roe v. Wade. Women of color have higher maternal mortality rates along with the fact that they make less money than other women. Also, the ability to travel is far less likely because most of the jobs that women of color hold do not have the flexibility to take time off to travel to another state for an abortion. The overturning of “the law of the land” is going to severely hurt and impact women of color more so than their white counterparts.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
