--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage4.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/Aaron pic .gif" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">This image depicts some of the common physical effects that abortion can have on a woman. It also shows what these effects can result in, none of which are pleasant. If womens rights for abortions get taken away these effects will only grow. This is because some women are still going to have abortions, just not in a safe way. This is a major reason we need to allow abortion  because the law won’t stop people from doing it, they will just look at unsafe alternatives. Abortions are already scary enough, we shoudn’t subject these women to only be able to do them in unsafe circumstances, where they have a much higher chance of dieing. Overall I feel that abortions should stay legal to lessen the physical effects and decrease the deaths due to unsafe abortions.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
