--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Equality in healthcare for all!</p>
-                <p class="masthead-subheading font-weight-light mb-0">Donate Here: https://prochoice.org/</p>
+                <p class="masthead-subheading font-weight-light mb-0"><a href=”https://prochoice.org”>Donate Here</a></p>
 
             </div>
         </header>
