--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 </div>
             </div>
         </section>
+<!-- Icon Divider-->
                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/16C4899D-62CE-4D79-80B7-92B771F42023.jpeg" alt="..." />
 
  
