--- a/index.html
+++ b/index.html
@@ -131,8 +131,12 @@
                     </div>
                 </div>
             </div>
-        </section>
-<!-- Icon Divider-->
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/16C4899D-62CE-4D79-80B7-92B771F42023.jpeg" alt="..." />
 
  
