--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/BBFD2440-20A1-4F98-AD72-9DDBAE86302A.webp" alt="..." />
                         </div>
                     </div>
                 </div>
