--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="container"><p>“I am an 17 year old mixed woman who was in an unhappy relationship with horrible mental health and one day took a test and found out I was pregnant. After taking time to comprehend what was going on, I decided the only choice I had was to get an abortion due to my mental health and my safety. The day after my procedure, I turned on the news and saw Roe v Wade was overturned, and I cried for all these women who were no longer able to make the choice I just made. To this day if I had a child at 17 I would most likely have given him or her up for adoption or not be here today to suicidal thoughts.”-Anonymous Person Anecdote. 
+                <div class="container"><p>“I am an 17 year old mixed woman who was in an unhappy relationship with horrible mental health and one day took a test and found out I was pregnant. After taking time to comprehend what was going on, I decided the only choice I had was to get an abortion due to my mental health and my safety. The day after my procedure, I turned on the news and saw Roe v. Wade was overturned, and I cried for all these women who were no longer able to make the choice I just made. To this day if I had a child at 17 I would most likely have given him or her up for adoption or not be here today to suicidal thoughts.”-Anonymous Personal Anecdote. 
                     
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
